# dt-cli

./: .bumpversion.cfg  .coveragerc  .dockerignore  .envrc  .flake8  .gitignore  .readthedocs.yml  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  default.nix  dt  pyproject.toml
.github/workflows/: build-test-release.yml  built-test-release.yml  release.yml  test.yml
dtcli/: __init__.py  __main__.py  acquire_alerts.py  api.py  building.py  click_helpers.py  constants.py  delete_extension.py  dev.py  server_api.py  shim.py  signing.py  utils.py  validate_schema.py  validation.py  version.py
dtcli/scripts/: __init__.py  dt.py  utility.py
tests/: __init__.py  test_backtrack_error.py  test_dt.py  test_signing.py  test_utils.py
