[tool.poetry]
authors = ["Wiktor Bachnik <wiktor.bachnik@dynatrace.com>", "Vagiz Duseev <vagiz.duseev@dynatrace.com>"]
description = "Dynatrace CLI"
documentation = "https://dt-cli.readthedocs.io"
homepage = "https://github.com/dynatrace-oss/dt-cli"
keywords = ["dynatrace", "cli", "extensions"]
license = "Apache-2.0"
maintainers = ["Wiktor Bachnik <wiktor.bachnik@dynatrace.com>", "Vagiz Duseev <vagiz.duseev@dynatrace.com>"]
name = "dt-cli"
packages = [
  {include = "dtcli"},
]
readme = "README.md"
repository = "https://github.com/dynatrace-oss/dt-cli"
version = "1.0.0"

[tool.poetry.dependencies]
PyYAML = "^5.4.1"
asn1crypto = "^1.4.0"
click = "^7.1.2"
click-aliases = "^1.0.1"
cryptography = "^3.4.7"
python = "^3.8"
wheel = "^0.36.2"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
Sphinx = "^3.5.4"
black = {version = "^20.8b1", allow-prereleases = true}
bump2version = "^1.0.1"
flake8 = "^3.9.1"
flake8-blind-except = "^0.2.0"
flake8-bugbear = "^21.4.3"
flake8-comprehensions = "^3.4.0"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"
flake8-polyfill = "^1.0.2"
ipython = "^7.22.0"
mypy = "^0.812"
pydocstyle = "^6.0.0"
pyinstaller = "^4.3"
pytest = "^5.2"
pytest-black = "^0.3.12"
pytest-cov = "^2.11.1"
pytest-flake8 = "^1.0.7"
pytest-mock = "^3.5.1"
pytest-mypy = "^0.8.1"
radon = "^4.5.0"
sphinxcontrib-programoutput = "^0.17"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.scripts]
dt = 'dtcli.scripts.dt:main'

[tool.black]
line-length = 78
